<resources>
    <string name="app_name">[22B10357] Diana Ukrainsky 321268112</string>
    <string name="two_lives_left">2 lives left !</string>
    <string name="one_life_left">ONLY 1 LIFE LEFT ! Be careful.</string>
    <string name="go_to_top_ten">Go to top players</string>
    <string name="start_game_with_sensors">Start game with sensors</string>
    <string name="start_game_with_buttons">Start game with buttons</string>
    <string name="insert_your_name_here">Insert your name here</string>
    <string name="title_activity_top_players">TopPlayersActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BUNDLE_KEY_FROM_GAME">RECORD</string>
    <string name="BUNDLE_RECORD_KEY">RECORD</string>
    <string name="LOCATION_PERMISSION_MESSAGE">Location Permission must be granted</string>
    <string name="INVALID_NAME_ENTERED_MESSAGE">Must enter valid player name</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="enter_name">Enter Name</string>
    <string name="next">Next</string>
    <string name="hello">Hello,</string>
    <string name="top_players">Top Players</string>
</resources>