<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#03A9F4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#7A1E2D"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B6E2D3"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/menu_TXT_hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed-light"
                    android:gravity="right"
                    android:text="@string/hello"
                    android:textSize="30sp"
                    tools:ignore="HardcodedText,InefficientWeight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#B6E2D3"
                android:orientation="horizontal">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/menu_TXT_playerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="----"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:fontFamily="sans-serif-light"
                android:gravity="left">
            </com.google.android.material.textview.MaterialTextView>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#D8A7B1

"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_BTN_startGameButtons"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    android:text="@string/start_game_with_buttons"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-light">
                </com.google.android.material.button.MaterialButton>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_BTN_startGameSensors"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    android:text="@string/start_game_with_sensors"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:textSize="25sp">

                </com.google.android.material.button.MaterialButton>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/menu_BTN_goToTopTen"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    android:text="@string/go_to_top_ten"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-light"/>


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>